kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactui-sample
  labels:
    app: reactui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reactui
  template:
    metadata:
      labels:
        app: reactui
    spec:
      containers:
      - name: reactui
        image: $(imageRepository)
        ports:
        - containerPort: 8080
